syntax = "proto3";

package chanstream.v1;

import "error/v1/error.proto";

// |||| SERVICE ||||

service ChannelStreamService {
  rpc Create(stream CreateRequest) returns (stream CreateResponse);
  rpc Retrieve(stream RetrieveRequest) returns (stream RetrieveResponse);
}

// |||| MODEL ||||

message ChannelSample {
  string channel_config_id = 1;
  double value = 2;
  int64 timestamp = 3;
}

// |||| CREATE ||||

message CreateRequest {
  ChannelSample channel_sample = 1;
}

message CreateResponse {
  error.v1.Error error = 1;
}

// |||| RETRIEVE ||||

message RetrieveRequest {
  repeated string pkc = 1;
}

message RetrieveResponse {
  ChannelSample channel_sample = 1;
  error.v1.Error error = 2;
}